Fix: SecurityConfig 403 error and AddEmployeeForm validation